@@ -6,22 +6,17 @@
   <version>0.0.1</version>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source> <!-- Cambiado a 21 -->
+    <maven.compiler.target>21</maven.compiler.target> <!-- Cambiado a 21 -->
     <junit.jupiter.version>5.4.0</junit.jupiter.version>
     <mockito-mockito-core-version>3.3.0</mockito-mockito-core-version>
     <maven-surefire-version>3.0.0-M3</maven-surefire-version>
     <archunit-version>0.21.0</archunit-version>
-    <!--
-    Therefore, we are very proud to announce the availability of JavaFX 17-ea+8 for MacOS AArch64, also known as the Apple M1. You can now download the JavaFX SDK for this platform from our JavaFX Download Page. Ref.: https://gluonhq.com/javafx-for-apple-m1/
-
-    Replace the line below by: <javafx-version>18.0.2</javafx-version>
-    -->
-    <javafx-version>17.0.2</javafx-version>
+    <javafx-version>20.0.2</javafx-version> <!-- Compatible con Java 21 -->
     <pitest-plugin-version>1.17.3</pitest-plugin-version>
     <pitest-junit5-plugin-version>1.0.0</pitest-junit5-plugin-version>
     <main-class>edu.fiuba.algo3.Main</main-class>
-  </properties>
+</properties>
   <dependencies>
     <dependency>
       <groupId>com.googlecode.json-simple</groupId>
@@ -33,7 +28,11 @@
       <artifactId>javafx-controls</artifactId>
       <version>${javafx-version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>${javafx-version}</version>
+    </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
@@ -56,6 +55,12 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
       <version>1.7.30</version>
+    </dependency>
+  
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>2.13.0</version>
     </dependency>
   </dependencies>
   <profiles>
@@ -103,7 +108,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <release>11</release>
+          <release>21</release> <!-- Cambiado a 21 -->
         </configuration>
       </plugin>
       <plugin>
@@ -137,15 +142,18 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven-surefire-version}</version>
+        <version>3.2.5</version>
         <configuration>
-          <argLine>${argLine} -XX:MaxPermSize=256m</argLine>
+          <testSourceDirectory>src/main/test</testSourceDirectory>
+          <includes>
+            <include>**/*.java</include>
+          </includes>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.2</version>
+        <version>0.8.11</version>
         <executions>
           <execution>
             <goals>
@@ -162,5 +170,23 @@
         </executions>
       </plugin>
     </plugins>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+    </resources>
+
   </build>
+  <dependencyManagement>
+    <dependencies>
+        <!-- Aquí puedes agregar otros BOMs -->
+        <!-- JavaFX BOM -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx</artifactId>
+            <version>17</version>
+            <type>pom</type>
+        </dependency>
+    </dependencies>
+</dependencyManagement>
 </project>
